--- a/css/styles.css
+++ b/css/styles.css
@@ -128,7 +128,7 @@ section.container {
 }
 
 footer {
-	padding: 70px 0 70px 0;
+	padding: 20px 0 70px 0;
 }
 
 footer,
@@ -145,7 +145,7 @@ footer a {
 
 footer a:hover,
 footer a:focus {
-	color: #FFFF00;
+	color: #FFFFFF;
 	text-decoration: underline;
 }
 
@@ -165,7 +165,5 @@ footer ul p {
 }
 
 ul {
-	-webkit-margin-before: 0em;
-	-webkit-margin-after: 0em;
-	-webkit-padding-start: 0px;
+	margin-top: 50px;
 }
