--- a/css/styles.css
+++ b/css/styles.css
@@ -152,6 +152,10 @@ section.container {
 	max-width: 100%;
 }
 
+#cust .uc_image {
+	padding-bottom: 30px;
+}
+
 .w_background {
 	background-color: #FFFFFF;
 }
@@ -163,7 +167,7 @@ section.container {
 .uc_text {
 	display: inline-block;
 	padding-top: 20px;
-	padding-bottom: 30px;
+	padding-bottom: 20px;
 }
 
 .uc_text p,
@@ -179,7 +183,7 @@ section.container {
 	padding-top: 20px;
 }
 
-#contact .h3 {
+#contact > .row > .h3 {
 	padding-top: 60px;
 }
 
@@ -244,4 +248,8 @@ footer ul {
 
 #uec_logo {
 	margin-top: 30px;
+}
+
+.spacing {
+	min-height: 50px;
 }
