--- a/v1.2/css/styles.css
+++ b/v1.2/css/styles.css
@@ -7,24 +7,23 @@ body {
 	src: url(../fonts/TrajanPro-Bold.ttf);
 }
 
-/*@media (min-width: 992px) {
-	.navbar-brand {
-		font-size: 24px;
-		padding: 15px 15px;
+@media (min-width: 992px) {
+	.navbar-nav > li > a {
+		line-height: 50px;
+	}
+	.navbar-nav > li > a {
+		padding: 5px 14px 5px 14px;
 	}
 }
 
 @media (min-width: 768px) {
-	.navbar-brand {
-		font-size: 20px;
-		padding: 15px 10px;
+	.navbar-nav > li > a {
+		line-height: 60px;
 	}
-	.navbar-brand > img {
-		display: inline-block;
-		padding-right: 10px;
+	.navbar-nav > li > a {
+		padding: 5px 14px 5px 14px;
 	}
-}*/
-
+}
 
 @media (max-width: 400px) {
 	.navbar-brand {
@@ -37,10 +36,7 @@ body {
 
 .navbar {
 	margin-bottom: 0;
-}
-
-.navbar-nav > li > a {
-	line-height: 60px;
+	background-color: #FFFFFF;
 }
 
 .navbar-default {
@@ -48,9 +44,8 @@ body {
 	border: none;
 }
 
-.navbar-brand > img {
-	display: inline-block;
-	max-width: 100%;
+.nav > li > a > img {
+    max-width: 100%;
 }
 
 .navbar-default .navbar-nav > li > a {
@@ -92,10 +87,6 @@ section.container {
 	}
 	.moveright {
 		left: 20px;
-	}
-
-	.navbar-nav > li > a {
-		padding: 15px 14px 15px 14px;
 	}
 }
 
