--- a/v1.2/css/styles.css
+++ b/v1.2/css/styles.css
@@ -34,6 +34,10 @@ body {
 	}
 }
 
+#uc_logo {
+	line-height: 60px;
+}
+
 .navbar {
 	margin-bottom: 0;
 	background-color: #FFFFFF;
@@ -95,13 +99,9 @@ section.container {
 		padding-top: 20px;
 		padding-bottom: 40px;
 	}
-	#uec_logo {
-		margin-top: 20px;
-	}
 }
 
-.uc_image img,
-#uec_logo img {
+.uc_image img {
 	max-width: 100%;
 }
 
